# xescrow

./: .gitattributes  README.md
account/: bulma-css-vars.config.cjs  index.html  package-lock.json  package.json  postcss.config.cjs  vite.config.ts
account/src/: ClientApp.vue  app.ts  router.ts  styles.ts
account/src/api/: api.ts  apiAccount.ts  apiAuth.ts
account/src/composables/: notyf.ts
account/src/directives/: background.ts
account/src/locales/: en.json  es.json  fr.json  pt.json
account/src/pages/: [...all].vue  account.vue  auth.vue
account/src/plugins/: colorShema.ts  i18n.ts  nprogress.ts  vueform.ts
account/src/routers/: auth.ts
account/src/scss/: main.scss
account/src/utils/: countdown.ts  formating.ts
account/src/workers/: countdown.ts
account/types/: components.d.ts  env.d.ts  imports.d.ts
api/: .gitignore  README  package-lock.json  package.json  tsconfig.json
api/src/: app.ts
api/src/controllers/: Data.ts  Signup.ts
api/src/database/: db.ts
api/src/errors/: ErrorHandling.ts
api/src/locales/: en.json  es.json  fr.json  pt.json
api/src/middlewares/: Csrf.ts  Recaptcha.ts  (+1 more)
apiAccount/: .gitignore  README  package-lock.json  package.json  tsconfig.json
apiAccount/src/: app.ts
comingSoon/: .gitignore  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
comingSoon/src/: ClientApp.vue  app.ts  entry-client.ts  styles.ts
comingSoon/types/: components.d.ts  env.d.ts  imports.d.ts
smartContract/: Cargo.toml
smartContract/src/: error.rs  instruction.rs  processor.rs  state.rs
(+409 files in other folders)
