[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.8"
borsh = "1.5.1"
solana-program = "2.0.9"
spl-associated-token-account = { version = "5.0.1", features = [ "no-entrypoint" ] }
spl-token-2022 = { version ="5.0.2", features = [ "no-entrypoint" ] }
thiserror = "1.0.63"

[lib]
name = "escrow"
crate-type = ["cdylib", "lib"]